[tool.poetry]
name = "sumuma"
version = "0.1.0"
description = ""
authors = ["uichi <37263474+uichi@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.12.1"
Django = "~4.2.9"
django-environ = "^0.11.2"
django-debug-toolbar = "^4.3.0"
django-tailwind = "^3.6.0"
mysqlclient = "^2.2.0"
djangorestframework = "^3.15.1"
drf-flex-fields = "^1.0.2"
drf-yasg = "1.21.5"
urllib3 = "2.2.1"
ruamel-yaml = "0.18.6"
wheel = "^0.43.0"
uwsgi = "^2.0.24"
django-browser-reload = "^1.12.1"
python-dateutil = "^2.9.0"
ruamel-yaml-clib = "^0.2.8"
packaging = "^24.0"
pytz = "^2024.1"
setuptools = "^69.2.0"
django-request-viewer = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
